@@ -127,15 +127,25 @@ BlockFactory().set_name("minecraft:amethyst_cluster").set_solid(
 ).set_all_side_solid(False).set_default_model_state("facing=up").finish()
 BlockFactory().set_name("minecraft:ancient_debris").finish()
 stone_like("andesite")
-BlockFactory().set_name("minecraft:anvil").set_solid(False).set_all_side_solid(False).set_default_model_state("facing=north").finish()
-BlockFactory().set_name("minecraft:azalea_leaves").set_solid(False).set_all_side_solid(False).finish()
-BlockFactory().set_name("minecraft:azalea_leaves_flowers").set_solid(False).set_all_side_solid(False).finish()
+BlockFactory().set_name("minecraft:anvil").set_solid(False).set_all_side_solid(
+    False
+).set_default_model_state("facing=north").finish()
+BlockFactory().set_name("minecraft:azalea_leaves").set_solid(False).set_all_side_solid(
+    False
+).finish()
+BlockFactory().set_name("minecraft:azalea_leaves_flowers").set_solid(
+    False
+).set_all_side_solid(False).finish()
 plant("minecraft:azure_bluet").finish()
 plant("minecraft:bamboo").set_default_model_state("age=0,leaves=small").finish()
 plant("minecraft:bamboo_sapling").finish()
-BlockFactory().set_name("minecraft:barrier").set_break_able_flag(False).set_all_side_solid(False).set_solid(False).finish()
+BlockFactory().set_name("minecraft:barrier").set_break_able_flag(
+    False
+).set_all_side_solid(False).set_solid(False).finish()
 BlockFactory().set_name("minecraft:basalt").set_log().finish()
-BlockFactory().set_name("minecraft:beacon").set_all_side_solid(False).set_solid(False).finish()
+BlockFactory().set_name("minecraft:beacon").set_all_side_solid(False).set_solid(
+    False
+).finish()
 
 
 # All blocks, by blockstate
