@@ -86,6 +86,7 @@ NEXT_EVENT_BUS_ID = 0
 
 CLIENT_NETWORK_HANDLER = None
 SERVER_NETWORK_HANDLER = None
+NETWORK_MANAGER = None
 
 ENABLE_MOD_LOADER = True
 ENABLE_DATAPACK_LOADER = True
